# cpplit

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml  cmake-single-platform.yml
docs/en-us/installation/: compilation.md
include/: ansi.h
include/exceptions/: command_errors.hpp  exception.hpp  fserrs.h  fserrs.hpp  lex.h  lex.hpp  lex_errors.hpp  runtime_errors.hpp  syntax_errors.h  syntax_errors.hpp
include/exceptions/handler/: lex.h  lex.hpp
include/extra/helper/: helper.hpp  version.hpp
include/language/: language.hpp
include/lex/: lex_string.h  lex_string.hpp  lexer.h  lexer.hpp  numcvt.hpp  tokens.h  trie.h  trie.hpp
include/lex/tokens/: entity.hpp  keyword.hpp  symbol.hpp  token.hpp
include/parse/: nodes.hpp  parser.hpp
include/parse/nodes/: expressions.h  node.h  node.hpp  statements.h  statements.hpp
include/reader/: encoding.h  reader.h  reader.hpp
include/sem/: sem_node.hpp
include/semantic/: builtins.h  builtins.hpp  class.hpp  environment.h  environment.hpp
include/semantic/builtin/: boolean.h  boolean.hpp  null.hpp  number.h  number.hpp  string.h  string.hpp  tuple.hpp
include/utils/: ansi.hpp  coding.hpp  encoding.hpp  losh.hpp  null.hpp  numcvt.hpp  position.hpp  ranges.hpp
src/: main.cpp
src/ast/implement/: bool.cpp  call_method.cpp  condition_loop.cpp  number.cpp  (+1 more)
src/lex/: lex_string.cpp  lexer.cpp  numcvt.cpp  trie.cpp
src/parse/: check.cpp  expr_keywords.cpp  parse_kw.cpp  parser.cpp  prase_defination.cpp
src/project/: project.hpp
src/reader/: reader.cpp
src/ui/: main.cpp
(+134 files in other folders)
